2021-05-28 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add arrayPath property at general level, also refactor ArrayHandler tests, resolves #175

2021-04-27 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Display preview step name when previewing in BE module, resolves #171

2021-04-26 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Deprecate all hooks, introduce PSR-14 events, resolves #167

2021-04-25 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve priority property documentation, resolves #177

2021-04-13 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Clean up code, apply PSR-12, use strict typing everywhere, resolves #168

2021-04-12 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Update DataTables library, resolves #165
	* Remove all deprecated properties and backwards-compatibility code, resolves #146
	* Clean up all unit and functional tests, resolves #170

2021-04-09 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Use Symfony dependency injection instead of Extbase's ObjectManager, references #164
	* Drop support for TYPO3 v9, resolves #116

2021-03-19 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Add validation of substructureFields property
	* Release version 5.1.1

2021-03-15 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve validation results API

2021-03-08 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix handling of substructure fields when substructure is empty, resolves #162

2021-02-22 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Fix link to repository for documentation editing (thanks to Mathias Brodala)
	* Release version 5.1.0

2021-02-19 Francois Suter (Idéative)  <typo3@ideative.ch>

	* Improve error reporting of failed user functions, resolves #159
	* Properly report about missing images in image transformation function, resolves #160
	* Unset value when user function transformation fails, resolves #161

2021-02-13 Francois Suter (Idéative)  <typo3@ideative.ch>
